feat: good progress on sandbox initialization/progress-updates in app UI
